[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/battle_theme.tres" type="Theme" id=1]
[ext_resource path="res://battle_button.gd" type="Script" id=2]

[node name="battle_button" type="Button" groups=[
"battle_button",
]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[connection signal="focus_entered" from="." to="." method="_on_battle_button_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_battle_button_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_battle_button_pressed"]
